# StompRenderer

./: .clang-tidy  .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  README.md  Renderer.cpp  Renderer.h  build.bat  compileShaders.bat  compile_shaders.sh  compile_vc_build.bat  default_imgui.ini  fresh_build.bat  main.cpp  setup.bat
CMake/: Cache.cmake  CompilerWarnings.cmake  Tests.cmake
assets/: cube_model.json  def_material.json  grass_material.json  grass_texture.json  main_scene.json  plane_material.json  plane_model.json  plane_texture.json  project.stomp  quad_model.json  texture.json  texture_specular.json  vik_material.json  viking_model.json  viking_texture.json  window_material.json  window_model.json  window_texture.json
imgui-docking/: imconfig.h
profiler/: CMakeLists.txt
profiler/src/: ProfilerCore.cpp  ProfilerCore.h
profiler/tests/: InitializationTests.cpp
shaders/: outline.frag  outline.vert  shader.frag  shader.vert  shaderLight.frag  shaderLight.vert  shaderLightBlend.frag  skybox.frag  skybox.vert
src/: Asset.cpp  Asset.h  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  FileDialog.cpp  FileDialog.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ISaveable.h  Light.h  LightObject.cpp  LightObject.h  LightSystem.cpp  LightSystem.h  Logs.cpp  Logs.h  Material.cpp  Material.h  MaterialAsset.cpp  MaterialAsset.h  MaterialInstance.cpp  MaterialInstance.h  MaterialManager.cpp  MaterialManager.h  Model.cpp  Model.h  ModelAsset.cpp  ModelAsset.h  ModelStatics.cpp  ModelStatics.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneAsset.cpp  SceneAsset.h  (+13 more)
src/AssetSystem/: Asset.cpp  Asset.h  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  MaterialAsset.cpp  MaterialAsset.h  ModelAsset.cpp  ModelAsset.h  ObjectFactory.cpp  ObjectFactory.h  ProjectSettings.h  SceneAsset.cpp  SceneAsset.h
src/Async/: ThreadPool.cpp  ThreadPool.h  threadsafe_map.h  threadsafe_queue.h
src/Core/: Application.cpp  Application.h  CoreLib.cpp  CoreLib.h  ICommand.h  MemoryPool.h  Profiling.h  Subsystem.cpp  Subsystem.h
src/IO/: ISaveable.h  JsonParser.h  SerializableObject.cpp  SerializableObject.h  stb_image.cpp
src/Math/: GlmHash.h
src/Rendering/: Cubemap.cpp  Cubemap.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  ModelStatics.cpp  ModelStatics.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureSrc.cpp  TextureSrc.h  UniformBuffer.cpp  UniformBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanImage.cpp  VulkanImage.h
src/UI/: AssetRepresentation.h  CameraPanel.cpp  CameraPanel.h  ContentBrowser.cpp  ContentBrowser.h  EntityPanel.cpp  EntityPanel.h  GlobalLightPanel.cpp  GlobalLightPanel.h  IDrawable.h  ImguiUnit.cpp  ImguiUnit.h  MainLayer.cpp  MainLayer.h  MaterialPanel.cpp  MaterialPanel.h  MaterialRepresentation.cpp  MaterialRepresentation.h  ModelRepresentation.cpp  ModelRepresentation.h  ScenePanel.cpp  ScenePanel.h  UIController.cpp  UIController.h  ViewPort.cpp  ViewPort.h
tests/: AssetSystemTests.cpp  CMakeLists.txt  MaterialAssetTest.cpp  ModelAssetTest.cpp
tests/AssetTests/: AssetObjectTest.cpp  AssetSystemTests.cpp  CMakeLists.txt  MaterialAssetTest.cpp  ModelAssetTest.cpp  SceneAssetTest.cpp
tests/AsyncTests/: CMakeLists.txt  JsonAsyncTests.cpp  SafeMapTests.cpp  SafeQueueTests.cpp  ThreadPoolTests.cpp
tests/GeneralTests/: CMakeLists.txt  CoreTest.cpp
